crates/rattler_installs_packages/src/snapshots/rattler_installs_packages__artifact__test__miniblack-23.1.0-py3-none-any.whl.snap
---
source: crates/rattler_installs_packages/src/artifact.rs
expression: record_content
---
black/__init__.py,sha256=VWazgq80l38r1Cn5Ea7fH5bMuDdFuQJtYgBKGWJganI,46682
blackd/__init__.py,sha256=cTJotjnER9YB0rDWo3hOWSg4v0mNAx5DFmCJdyB1s5k,8068
miniblack-23.1.0.dist-info/INSTALLER,sha256=FpzDrzfcP6oI1mbsvYAjw7hT2I4P4wr99k5NKqmKJt0,10
miniblack-23.1.0.dist-info/METADATA,sha256=galtIfXUJ5UEq_3ERFi03BdCo6KHkz2r6jc0EYPsEPY,58963
miniblack-23.1.0.dist-info/RECORD,,
miniblack-23.1.0.dist-info/WHEEL,sha256=rE4t8wm7r0N5wTLLeSbOvJha-KwM1ALPuB-FmvNahDo,144
miniblack-23.1.0.dist-info/entry_points.txt,sha256=qBIyywHwGRkJj7kieq86kqf77rz3qGC4Joj36lHnxwc,78
miniblack-23.1.0.dist-info/licenses/AUTHORS.md,sha256=cpHlH2nYyIXWEnA0LccoGenN-g5HZ7341klZ7MwbdIU,8043
miniblack-23.1.0.dist-info/licenses/LICENSE,sha256=nAQo8MO0d5hQz1vZbhGqqK_HLUqG1KNiI9erouWNbgA,1080

