crates/rattler_installs_packages/src/snapshots/rattler_installs_packages__artifact__test__purelib_and_platlib-1.0.0-cp38-cp38-linux_x86_64.whl.snap
---
source: crates/rattler_installs_packages/src/artifact.rs
expression: record_content
---
pure.py,sha256=VRmPEZgJrqUEQPsd8wxEp7cMWzySWs7MojKDGZhjUCQ,28
purelib_and_platlib-1.0.0.dist-info/INSTALLER,sha256=FpzDrzfcP6oI1mbsvYAjw7hT2I4P4wr99k5NKqmKJt0,10
purelib_and_platlib-1.0.0.dist-info/METADATA,sha256=3YoTq5hsIcUfHSB9eMPScL0ntE8JfFNnwUAL9qUjy5g,62
purelib_and_platlib-1.0.0.dist-info/RECORD,,
purelib_and_platlib-1.0.0.dist-info/WHEEL,sha256=3L-5uHiSOZxNkLCtSZK7mYrls2MmCfq0WHor5xNVzco,86

